--- a/docs/src/styles/docs/sidebar.scss
+++ b/docs/src/styles/docs/sidebar.scss
@@ -23,10 +23,12 @@
 
   &.collapsed {
     display: none;
-    @media (min-width: $breakpoint-large) {
-      display: block;
-      .docs-home & {
-        display: none;
+    &:not(.always-collapsible) {
+      @media (min-width: $breakpoint-large) {
+        display: block;
+        .docs-home & {
+          display: none;
+        }
       }
     }
   }
@@ -36,13 +38,15 @@
   width: 0;
 
   // desktop
-  @media (min-width: $breakpoint-large) {
-    flex-shrink: 0;
-    width: 20rem;
-    position: relative;
+  &:not(.always-collapsible) {
+    @media (min-width: $breakpoint-large) {
+      flex-shrink: 0;
+      width: 20rem;
+      position: relative;
 
-    .docs-home & {
-      width: 0;
+      .docs-home & {
+        width: 0;
+      }
     }
   }
 }
